Fix color contrast comment streams
ERM43868

[5.1.x]

(cherry picked from commit 27ab8d789bb899f67d575f963748a7792008fc3a)

--- a/resources/stylesheets/fixes/commentstreams.css
+++ b/resources/stylesheets/fixes/commentstreams.css
@@ -30,6 +30,11 @@ main .cs-comment {
 	overflow: visible;
 }
 
+main .cs-comment-details,
+main .cs-comment-author-anonymous {
+	color: #454545;
+}
+
 main .cs-comment-header {
 	border-bottom: 1px solid var( --comments-section-border-color );
 }
